Change project overlay layout issue

--- a/style.css
+++ b/style.css
@@ -790,7 +790,7 @@ body.dark-mode .project-buttons .code:hover {
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
   transition: 0.3s;
   width: auto;
-  height: 38vh;
+  height: auto;
 }
 
 .project-card:hover {
@@ -801,11 +801,15 @@ body.dark-mode .project-buttons .code:hover {
 
 .project-image {
   position: relative;
-  padding: 25px;
+  overflow: hidden;
+  width: 100%;
+  height: 250px;
 }
 
 .project-image img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
   display: block;
 }
 
@@ -813,14 +817,20 @@ body.dark-mode .project-buttons .code:hover {
 
 .project-overlay {
   position: absolute;
-  inset: 0;
-  background: rgba(0, 0, 0, 0.6);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background: rgba(0,0,0,0.6);
+
   display: flex;
-  align-items: center;
   justify-content: center;
-  opacity: 0;
-  transition: 0.3s;
+  align-items: center;
   flex-direction: column;
+
+  opacity: 0;
+  transition: 0.3s ease;
 }
 
 .project-image:hover .project-overlay {
@@ -1159,7 +1169,7 @@ footer p {
   }
 
   .project-card {
-    height: 40vh;
+    height: auto;
     width: auto;
   }
 
